styles.css
* {
    margin:  0;
    padding: 0;
    box-sizing: border-box;
    font-family: "Google Sans", sans-serif;
}

i {
    color: rgb(3, 42, 3);
}

.btn {
    text-decoration: none;
    background-color:rgb(3, 42, 3);
    color: white;
}

/* Navigation Styles */

nav {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    height: 70px;
    padding: 50px 20px;
    background-color: white;
    position: sticky;
    top: 0;
}

nav .leftSide h2 a {
    color: rgb(3, 42, 3);
    text-decoration: none;
    text-align: center;
    font-size: 2rem;
}

nav .leftSide h2 a span {
    display: block;
    font-size: 1.4rem;
}

nav .middleSection ul {
    display: flex;
    flex-direction: row;
    gap: 40px;
}

nav .middleSection ul li {
    list-style: none;
}

nav .middleSection ul li a {
    text-decoration: none;
    color:rgb(3, 42, 3);
    font-weight: 600;
    font-size: 1.2rem;
    padding-bottom: 8px;
    border-bottom: 3px solid white;
}

nav .middleSection ul li a:hover {
    border-bottom: 3px solid rgb(3, 42, 3);
}

nav .rightSide .btn {
    font-weight: 500;
    font-size: 1.2rem;
    padding: 12px 20px;
}

/* Main Styles */

main {
    display: flex;
    flex-direction: column;
}

main .hero {
    background: linear-gradient(rgba(0, 0, 0, 0.478), rgba(0, 0, 0, 0.478)), url(https://images.pexels.com/photos/30391786/pexels-photo-30391786.jpeg?_gl=1*t7lim*_ga*OTEyMDA2NjMwLjE3NzIxMjg4MzA.*_ga_8JE65Q40S6*czE3NzI3Mjc2OTUkbzckZzEkdDE3NzI3MjgwNjYkajEkbDAkaDA.);
    background-size: cover;
    width: 100%;
    height: 600px;
    display: flex;
    justify-content: center;
    align-items: end;
}

main .hero h1 {
    color: white;
    font-size: 4rem;
    margin-bottom: 40px;
}

main .intro {
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 40px;
}

main .intro .col50 {
    width: 50%;
    padding: 30px 60px;
}

main .intro h2 {
    color: rgb(3, 42, 3);
    margin-bottom: 15px;
    font-size: 2.5rem;
}

main .intro p {
    font-size: 18px;
}

main .intro .col50 .imgContainer {
    width: 40px;
}

main .into .imgContainer img {
    width: 50%;
}

/* Footer styles */

footer {
    width: 100%;
    height: 70px;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: rgb(3, 42, 3);
    color: white;
}

